6장 진도 나갔음

--- a/ContactApp/MainWindow.xaml
+++ b/ContactApp/MainWindow.xaml
@@ -8,6 +8,17 @@
         Title="MainWindow" Height="450" Width="800">
     <StackPanel Margin="10">
         <Button x:Name="openNewContact" Click="OpenNewContact_OnClick">New Contact</Button>
-        <ListView x:Name="contactListView"/>
+        <TextBox Margin="0,5,0,5" x:Name="txtSearch" TextChanged="TxtSearch_OnTextChanged"></TextBox>
+        <ListView x:Name="contactListView" Height="280" SelectionChanged="ContactListView_OnSelectionChanged">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Name}"></TextBlock>
+                        <TextBlock FontSize="15" Foreground="DodgerBlue" Text="{Binding Email}"></TextBlock>
+                        <TextBlock FontSize="15" FontStyle="Italic" Text="{Binding Phone}"></TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackPanel>
 </Window>
