--- a/ContactApp/MainWindow.xaml
+++ b/ContactApp/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ContactApp"
+        xmlns:uc="clr-namespace:ContactApp.Controls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <StackPanel Margin="10">
@@ -12,11 +13,12 @@
         <ListView x:Name="contactListView" Height="280" SelectionChanged="ContactListView_OnSelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Name}"></TextBlock>
-                        <TextBlock FontSize="15" Foreground="DodgerBlue" Text="{Binding Email}"></TextBlock>
-                        <TextBlock FontSize="15" FontStyle="Italic" Text="{Binding Phone}"></TextBlock>
-                    </StackPanel>
+                    <uc:ContactControl Contact="{Binding}"/>
+                    <!-- <StackPanel> -->
+                    <!--     <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Name}"></TextBlock> -->
+                    <!--     <TextBlock FontSize="15" Foreground="DodgerBlue" Text="{Binding Email}"></TextBlock> -->
+                    <!--     <TextBlock FontSize="15" FontStyle="Italic" Text="{Binding Phone}"></TextBlock> -->
+                    <!-- </StackPanel> -->
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
